data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_979.wast
;; 10. **Mismatched Function Types in Indirect Call:**    - Utilize `call_indirect` to invoke functions of varying types within a `block`, followed by a `br` instruction. Ensure that function type checking during the indirect call handles branching correctly and maintains execution integrity despite mismatched function signatures.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 anyfunc)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func $type-mismatch-indirect-call
      (block (result i32)
        (call_indirect (type $sig) (i32.const 42) (i32.const 0))
        (br 0 (i64.const 0))
      )
    )
  )
  "type mismatch"
)